PR comments: wording edits and optimized webp image

--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: <OrganizationList />
-description: The `<OrganizationList />` component is used to display organization related memberships, invitations, and suggestions for the user.
+description: The <OrganizationList /> component is used to display organization related memberships, invitations, and suggestions for the user.
 ---
 
 # `<OrganizationList />`
@@ -9,83 +9,74 @@ description: The `<OrganizationList />` component is used to display organizatio
   alt="Organization List Example"
   width={992}
   height={568}
-  src="/docs/images/ui-components/component-org_list.png"
+  src="/docs/images/ui-components/component-org_list.webp"
 />
 
 The `<OrganizationList />` component is used to display organization related memberships, invitations, and suggestions for the user.
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix']}>
-  <Tab>
-    <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/discover/page.[jsx/tsx]"
-      import { OrganizationList } from "@clerk/nextjs";
+<CodeBlockTabs options={["Next.js App Router", "Next.js Pages Router", "React", "Remix"]}>
+```jsx copy filename="/app/discover/page.[jsx/tsx]"
+import { OrganizationList } from "@clerk/nextjs";
 
-      export default function OrganizationListPage() {
-        return (
-            <OrganizationList
-                afterCreateOrganizationUrl='/organization/:slug'
-                afterSelectPersonalUrl='/user/:id'
-                afterSelectOrganizationUrl='/organization/:slug'
-            />
-        );
-      }
-      ```
+export default function OrganizationListPage() {
+  return (
+      <OrganizationList
+          afterCreateOrganizationUrl='/organization/:slug'
+          afterSelectPersonalUrl='/user/:id'
+          afterSelectOrganizationUrl='/organization/:slug'
+      />
+  );
+}
+```
 
-      ```jsx copy filename="/pages/discover.[jsx/tsx]"
-      import { OrganizationList } from "@clerk/nextjs";
+```jsx copy filename="/pages/discover.[jsx/tsx]"
+import { OrganizationList } from "@clerk/nextjs";
 
-      export default function OrganizationListPage() {
-        return (
-            <OrganizationList
-                afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
-                afterSelectPersonalUrl={user => `/user/${user.id}`}
-                afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
-            />
-        );
-      }
-      ```
-    </CodeBlockTabs>
-  </Tab>
+export default function OrganizationListPage() {
+  return (
+      <OrganizationList
+          afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+          afterSelectPersonalUrl={user => `/user/${user.id}`}
+          afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+      />
+  );
+}
+```
 
-  <Tab>
-    ```jsx copy filename="discover.tsx"
-    import { OrganizationList } from "@clerk/clerk-react";
+```jsx copy filename="discover.tsx"
+import { OrganizationList } from "@clerk/clerk-react";
 
-    export default function OrganizationListPage() {
-      return (
-          <OrganizationList
-              afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
-              afterSelectPersonalUrl={user => `/user/${user.id}`}
-              afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
-          />
-      );
-    }
-    ```
-  </Tab>
+export default function OrganizationListPage() {
+  return (
+      <OrganizationList
+          afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+          afterSelectPersonalUrl={user => `/user/${user.id}`}
+          afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+      />
+  );
+}
+```
 
-  <Tab>
-    ```jsx copy filename="/route/discover.tsx"
-    import { OrganizationList } from "@clerk/remix";
+```jsx copy filename="/route/discover.tsx"
+import { OrganizationList } from "@clerk/remix";
 
-    export default function OrganizationListPage() {
-      return (
-          <OrganizationList
-              afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
-              afterSelectPersonalUrl={user => `/user/${user.id}`}
-              afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
-          />
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
+export default function OrganizationListPage() {
+  return (
+      <OrganizationList
+          afterCreateOrganizationUrl={org => `/organization/${org.slug}`}
+          afterSelectPersonalUrl={user => `/user/${user.id}`}
+          afterSelectOrganizationUrl={org => `/organization/${org.slug}`}
+      />
+  );
+}
+```
+</CodeBlockTabs>
 
 ### Force Organizations
 
-For specific applications, we want to prohibit people from using their personal accounts as they need to be part of an organization.
-Use <code>{"<OrganizationList/>"}</code> with <code>{"hidePeronsal"}</code> in order to guide your user to join or create an organization in order to continue.
+If you would like to prohibit people from using their personal accounts and force them to be part of an organization, the `hidePersonal` property forces your user to join or create an organization in order to continue.
 ```tsx copy filename="organization-portal.tsx"
 export default function OrganizationListPage() {
   return (
@@ -101,69 +92,11 @@ export default function OrganizationListPage() {
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>hidePersonal</code>,
-        <code>boolean</code>,
-        <>
-          By default, users can switch between organization and their personal account.
-This option controls whether <code>{"<OrganizationList />"}</code> will include the user's personal account
-in the organization list. Setting this to <code>false</code> will hide the personal account entry,
-and users will only be able to switch between organizations.
-          <br/>Defaults to: <code>false</code>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>skipInvitationScreen</code>,
-        <code>boolean | undefined</code>,
-        <>
-          Hides the screen for sending invitations after an organization is created.
-          When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1
-          <br/>Defaults to: <code>false</code>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>appearance</code>,
-        <code>object</code>,
-        <>
-         Controls the overall look and feel.
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterCreateOrganizationUrl</code>,
-        <code>((org: Organization) =&gt; string) | string</code>,
-        <>Full URL or path to navigate after creating a new organization.
-          <br/>Defaults to: <code>undefined</code>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSelectOrganizationUrl</code>,
-        <code>((org: Organization) =&gt; string) | string</code>,
-        <>Full URL or path to navigate after creating a new organization.
-          <br/>Defaults to: <code>undefined</code>
-        </>,
-      ],
-    },
-     {
-      cells: [
-        <code>afterSelectPersonalUrl</code>,
-        <code>((user: Organization) =&gt; string) | string</code>,
-        <>Full URL or path to navigate after creating a new organization.
-          <br/>Defaults to: <code>undefined</code>
-        </>,
-      ],
-    },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `OrganizationList` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations.<br />Defaults to `false`.
+| `skipInvitationScreen` | `boolean` \| `undefined` | Hides the screen for sending invitations after an organization is created. When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1.<br />Defaults to `false`.
+| `apperance` | `object` | Controls the overall look and feel.
+| `afterCreateOrganizationUrl` | `((org: Organization) => string)` \| `string` | Full URL or path to navigate after creating a new organization.<br />Defaults to `undefined`.
+| `afterSelectOrganizationUrl` | `((org: Organization) => string)` \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`.
+| `afterSelectPersonalUrl` | `((org: Organization) => string)` \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`.
