--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -1,24 +1,24 @@
 ---
 title: Verified Domains
-description: Learn about how to use verified domains for organizations
+description: Learn about how to use verified domains for organizations.
 ---
 
-# Creating and Verifying a Domain
+# Creating and verifying a domain
 
-Domains can be added and verified under an organization by administrators. In order to enable this feature, make sure to enable verified domains in the dashboard's _Organization Settings > Verified domains_. The only parameter needed to to create an organization domain is the `name`.
+Domains can be added and verified under an organization by an administrator. In order to enable this feature, make sure to enable verified domains in the **Verified domains** section of the [Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings) in the Clerk Dashboard. The only parameter needed to to create an organization domain is the `name`.
 
 Domains can be verified through an email verfication code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
 
-An instance may only have one verified domain of same name, and an organization may only have one domain of the same name (verified or unverified).
+An application instance may only have one verified domain of the same name, and an organization may only have one domain of the same name (verified or unverified).
 
-# Enrollment Modes
+## Enrollment modes
 
 Once a domain is created and verified, an administrator can choose between two enrollment modes to enable new ways for users to join organizations.
 
-- `automatic invitations` - During sign up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
-- `automatic suggestions` - During sign up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user joins the organization.
+- `automatic_invitation` - During sign-up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
+- `automatic_suggestion` - During sign-up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user can join the organization.
 
-# Usage
+### Usage
 
 ```tsx copy
 const { organization, domains } = useOrganization();
