fix a small typo

--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -226,7 +226,7 @@ If you define an `afterAuth` function, it will run even if the request correspon
       cells: [
         <code>signInUrl?</code>,
         <code>string</code>,
-       `An alternatve sign in URL.`
+       `An alternative sign in URL.`
       ],
     },
     {
