fix broken codeblock; migrate table from component to mdx

--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -1,82 +1,28 @@
 ---
 title: Authentication Object
-description:
+description: The Authentication object contains information about the current user's session.
 ---
 
 # `Authentication` Object
 
 ## Props
 
-<Tables
-  headings={["Name", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>actor</code>,
-        <>Holds identifier for the user that is impersonating the current user</>,
-      ],
-    },
-    {
-      cells: [
-        <code>debug</code>,
-        <>Used to help debug issues when using Clerk in development</>,
-      ],
-    },
-    {
-      cells: [
-        <code>getToken</code>,
-        <>A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template</>,
-      ],
-    },
-    {
-      cells: [
-        <code>orgId</code>, 
-        <>The current user's organization ID</>
-      ],
-    },
-    {
-      cells: [
-          <code>orgRole</code>, 
-          <>The current user's organization role</>
-        ],
-    },
-    {
-      cells: [
-          <code>orgSlug</code>, 
-          <>The current user's organization slug</>
-        ],
-    },
-    {
-      cells: [
-          <code>organization</code>,
-          <>The current user's organization object</>
-        ],
-    },
-    {
-      cells: [
-          <code>sessionClaim</code>, 
-          <>The current user's session claim</>
-        ],
-    },
-    {
-      cells: [
-          <code>sessionId</code>, 
-          <>The current user's session ID</>
-        ],
-    },
-    {
-      cells: [
-          <code>userId</code>, 
-          <>The current user's unique identifier</>
-        ],
-    },
-  ]}
-/>
+| Name | Description |
+| --- | --- |
+| `actor` | Holds identifier for the user that is impersonating the current user |
+| `debug` | Used to help debug issues when using Clerk in development |
+| `getToken` | A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template |
+| `orgId` | The current user's organization ID |
+| `orgRole` | The current user's organization role |
+| `orgSlug` | The current user's organization slug |
+| `organization` | The current user's organization object |
+| `sessionClaim` | The current user's session claim |
+| `sessionId` | The current user's session ID |
+| `userId` | The current user's unique identifier |
 
 ## Example
 
-```
+```js
 {
   sessionId: 'sess_2GaMqUCB3Sc1WNAkWuNzsnYVVEy',
   userId: 'user_2F2u1wtUyUlxKgFkKqtJNtpJJWj',
