--- a/docs/integrations/databases/grafbase.mdx
+++ b/docs/integrations/databases/grafbase.mdx
@@ -10,19 +10,19 @@ The first step is to create a new Clerk application from your Clerk Dashboard if
 After your Clerk application has been created, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Grafbase.
 
 <Images 
-  width={}
-  height={}
-  src=""
-  alt=""
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/grafbase/jwt-template.webp"
+  alt="The JWT Templates page in the Clerk Dashboard. The 'New template' button was clicked, and a pop up titled 'New JWT template' is shown. The 'Grafbase' template is hovered over."
 />
 
 Once the Grafbase template is created, you will be redirected to the template's page. You can now configure the template to your needs.
 
 <Images 
-  width={}
-  height={}
-  src=""
-  alt=""
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/grafbase/create-template.webp"
+  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard."
 />
 
 The Convex template will pre-populate the default claims required by Grafbase. You can include additional claims as necessary. [Shortcodes](/docs/backend-requests/making/jwt-templates#shortcodes) are available to make adding dynamic user values easy.
@@ -32,10 +32,10 @@ The Convex template will pre-populate the default claims required by Grafbase. Y
 </Callout>
 
 <Images 
-  width={}
-  height={}
-  src=""
-  alt=""
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/grafbase/template-shortcodes.webp"
+  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. The page is scrolled down to the 'Claims' section."
 />
 
 ## Configure Grafbase
@@ -43,10 +43,10 @@ The Convex template will pre-populate the default claims required by Grafbase. Y
 The next step is to configure Convex with the issuer domain provided by Clerk. From your Clerk **JWT template** screen, find the **Issuer** input and click to **Copy** the URL.
 
 <Images 
-  width={}
-  height={}
-  src=""
-  alt=""
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/grafbase/template-issuer.webp"
+  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. There is a red box surrounding the 'Issuer' section."
 />
 
 ### Signed in user authentication
