fix incorrect image alt tags

--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -42,7 +42,7 @@ The next step is to configure Convex with the issuer domain provided by Clerk. F
   width={3024}
   height={1648}
   src="/docs/images/integrations/convex/template-issuer.webp"
-  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. The page is scrolled down to the 'Claims' section."
+  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. There is a red box surrounding the 'Issuer' section."
 />
 
 In your terminal, run the following command from your Convex app directory:
