--- a/docs/integrations/databases/fauna.mdx
+++ b/docs/integrations/databases/fauna.mdx
@@ -54,7 +54,7 @@ The completed provider form should resemble the following:
   width={3024}
   height={1648}
   src="/docs/images/integrations/fauna/new-access-provider.webp"
-  alt="The 'New access provider' form in Fauna.'"
+  alt="The 'New access provider' form in Fauna."
 />
 
 Before clicking the **Save** button, copy the **Audience URL** and then go ahead and save.
@@ -67,7 +67,7 @@ Navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt
   width={3024}
   height={1648}
   src="/docs/images/integrations/fauna/jwt-templates.webp"
-  alt="The 'New access provider' form in Fauna.'"
+  alt="The JWT Templates page in the Clerk Dashboard. The 'New template' button was clicked, and a pop up titled 'New JWT template' is shown. The 'Fauna' template is hovered over."
 />
 
 Once the Convex template is created, you will be redirected to the template's page. You can now configure the template to your needs.
@@ -76,7 +76,7 @@ Once the Convex template is created, you will be redirected to the template's pa
   width={3024}
   height={1648}
   src="/docs/images/integrations/fauna/create-template.webp"
-  alt="The 'New access provider' form in Fauna.'"
+  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard."
 />
 
 Scroll down to the **Claims** section and set the `aud` claim to the **Audience URL** you copied from Fauna. The URL format should be `https://db.fauna.com/db/<YOUR_FAUNA_DB_ID>`.
@@ -85,7 +85,7 @@ Scroll down to the **Claims** section and set the `aud` claim to the **Audience 
   width={3024}
   height={1648}
   src="/docs/images/integrations/fauna/template-shortcodes.webp"
-  alt="The 'New access provider' form in Fauna.'"
+  alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. The page is scrolled down to the 'Claims' section."
 />
 
 You can include additional claims if you’d like, but `aud` is the only required one. [Shortcodes](/docs/backend-requests/making/jwt-templates#shortcodes) are available to make adding dynamic user values easy.
