Migrate saml-at-clerk from Sanity to MDX

--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -1,3 +1,115 @@
 ---
-sanity_slug: /docs/authentication/saml-at-clerk
+title: SAML at Clerk
+description: Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
 ---
+
+# SAML at Clerk
+
+Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
+
+## Prerequisites
+
+- A Clerk application with the [Business](https://clerk.com/pricing) plan.
+- An `email_address` enabled as a strategy. To do so, navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) section of the Clerk Dashboard. In the **Contact information** section, enable the **Email address** strategy by toggling on the switch.
+
+## Create a SAML connection
+
+To create a SAML Connection, get started by visiting the [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections) section in the Clerk Dashboard.
+
+Click on the **Create connection** button.
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/enterprise-connections.webp"
+  alt="The Enterprise Connections section in the Clerk Dashboard. There is a red arrow pointing to the 'Create connection' button."
+/>
+
+Once you have clicked on the **Create connection** button, you will be presented with a modal to create a new connection. Fill in the required fields.
+
+- **Name** - A unique name for the connection. This is so you can tell your connections apart.
+- **Domain** - This is the email domain for which you will enable Enterprise SSO.
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/create-connection.webp"
+  alt="The Enterprise Connections section in the Clerk Dashboard. The 'Create connection' modal is open."
+/>
+
+Once you have filled in these fields, you will be directed to the configuration settings page for the connection you just created.
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/enterprise-connection-settings-1.webp"
+  alt="The configuration settings for the Enterprise connection that was created."
+/>
+
+Scroll down to the **Service provider details** section. You will need to add these two fields to your IdP’s application:
+
+- SP Entity ID - This is a unique identifier for your SAML connection that your IdP application needs. Different providers use different terminology so consult our glossary table to locate the right term for your case.
+- ACS URL - This is your application’s URL that your IdP will redirect your users back to after they have authenticated in your IdP. Different providers use different terminology so consult our glossary table to locate the right term for your case.
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/enterprise-connection-settings-2.webp"
+  alt="The configuration settings for the Enterprise connection that was created. The page is scrolled down to show the 'Service provider details' section."
+/>
+
+Scroll down to the **Identity provider configuration** section. Here, you will see:
+
+- **IdP Entity ID** - This is the unique identifier of your IdP application.
+- **IdP SSO URL** - This is your IdP’s URL that we’ll redirect your users to so that they authenticate.
+- **Certificate** - This is the certificate needed for Clerk to securely connect to your IdP.
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/authentication/enterprise-connection-settings-3.webp"
+  alt="The configuration settings for the Enterprise connection that was created. The page is scrolled down to show the 'Identity provider configuration' section."
+/>
+
+## Map your IdP’s claims to Clerk fields
+
+The last step is to map your IdP claims to Clerk’s `email`, `firstName`, `lastName` fields. The first is required for the integration to work and the last two are required for getting the user’s name.
+
+| Clerk Field | Azure AD Claim Names | Google Claim Names | Okta Claim Names |
+| --- | --- | --- | --- |
+| `email` (required) | `user.userprincipalname` | Basic Information > Primary email | `user.email` |
+| `firstName` | `user.givenname` | Basic Information > First name | `user.firstName` |
+| `lastName` | `user.surname` | Basic Information > Last name | `user.lastName` |
+
+## Map every other claim
+
+If you wish to map other claims from your IdP, you can do so by mapping them to your users' public metadata. You do this by prepending the Clerk claims with `public_metadata_`.
+
+For example, the claim `public_metadata_country` with the value `Canada` will be saved in the user's `public_metadata` under the key `country` with the value `Canada`.
+
+Learn more about how to access the [metadata](/docs/users/metadata) from our APIs.
+
+## Activate your SAML Connection
+
+Now that everything is set up, you need to activate the SAML Connection via the Clerk Dashboard. This is so you don't expose your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+
+## Authenticate with SAML
+
+Everything should be set up now for you to try out authentication via SAML. Go to your application’s Sign In page and add your email in the input field. If it matches an active SAML Connection, you will be redirected to your IdP where you will log in with your credentials.
+
+## Glossary
+| Term | Explanation | Azure AD Terminology | Google Terminology | Okta Terminology |
+| --- | --- | --- | --- | --- |
+| `idp_entity_id` | This is the unique identifier of your IdP’s application. | Azure AD Identifier | Entity ID | Identity Provider Issuer |
+| `idp_sso_url` | This is your IdP’s URL that we’ll redirect your users to so that they authenticate. | Login URL | SSO URL | Identity Provider Single Sign-On URL |
+| `idp_certificate` | This is the certificate needed for Clerk to securely connect to your IdP. | Certificate (Base64) | Certificate | x.509 Certificate |
+| `sp_entity_id` | This is a unique identifier for your SAML connection that your IdP application needs. | Identifier (Entity ID) | Entity ID (Under “Service Provider Details”) | Audience URI (SP Entity ID) |
+| `acs_url` | This is your application’s URL that your IdP will redirect your users back to after they have authenticated in your IdP. | Reply URL (Assertion Consumer Service URL) | ACS URL | Single sign-on URL |
+| SAML | This is the protocol that we are using to connect to your Identity Provider. Other protocols are OIDC, OAuth 2.0. | | | |
+| SAML Connection | This is the connection that you create in Clerk to hold the integration configuration. | | | |		
+| Identity Provider | This is the service you are using to store your users’ identity. Azure AD and Okta are two popular providers. | | | |	
+| IdP | Abbreviation for “Identity Provider” | | | |		
+| IdP Application | This is an application from the IdP that connects to | | | |		
+| Service Provider | This is the service that requests and receives the identity from the IdP. | | | |	
+| SP | Abbreviation for “Service Provider”. | | | |	
+
