add faq section

--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -1,9 +1,9 @@
 ---
-title: SAML at Clerk
+title: SAML at Clerk (Beta)
 description: Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
 ---
 
-# SAML at Clerk
+# SAML at Clerk (Beta)
 
 Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
 
@@ -113,3 +113,32 @@ Everything should be set up now for you to try out authentication via SAML. Go t
 | Service Provider | This is the service that requests and receives the identity from the IdP. | | | |	
 | SP | Abbreviation for “Service Provider”. | | | |	
 
+## FAQ
+
+**I’ve enabled other strategies but they don’t work.**
+
+It is expected that once Enterprise SSO is enabled in an organization, there should be no other authentication methods applicable. This is in line with an organization’s intent to manage their users’ identity from one place.
+
+**Will SAML work for my existing users?**
+
+Yes, SAML will work for your existing users as well! That means, that if you enable SAML, any existing users that their email address matches the SAML Connection domain, they will have to authenticate on the IdP side and an Enterprise Account will be linked to their existing account.
+
+**What happens if I have multi-factor enabled at Clerk?**
+
+This will work: Once the user comes back from the IdP, they will need to go through the extra factors of authentication. This is in case you need to add extra factors on top of what your IdP supports (or in case they don’t). You can choose to not enable this feature if you wish.
+
+**What happens if I delete the SAML connection? Will my users be deleted?**
+
+The users will not be deleted, so your application will not break. However, they will need to “reintroduce” themselves to your new strategies by resetting their passwords or via OTP (depending on the strategy you choose).
+
+**How much does it cost now?**
+
+It’s going to be free during the Beta period.
+
+**How much will it cost after Beta?**
+
+It will cost $50 per connection for production Instances. Connections in development instances are and will be free, but capped to 5.
+
+**Can I get a bulk discount?**
+
+Yes, [reach out to us](https://clerk.com/support) and we will work a plan out.
